--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
     <main>
         <div class="card">
-            <img src="/images/illustration-hero.svg" id="hero" alt="image here">
+            <img src="./images/illustration-hero.svg" id="hero" alt="image here">
             <div class="content">
 
                 <h3 > Order Summary</h3>
             <p> You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
             <div class="container">
-                <img src="/images/icon-music.svg" id="music" alt="music image">
+                <img src="./images/icon-music.svg" id="music" alt="music image">
                 <div class="plan">
                     <p id="annual"> Annual plan</p>
                     <p> $59.99/year</p>
