--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Frontend Mentor| Order summary component</title>
-    <link rel="icon" href="favicon-32x32.png">
+    <link rel="icon" href="./images/favicon-32x32.png">
 </head>
 <body>
 
